# IndicConversations

./: .env.example  LICENSE  README.md  app.py  pyproject.toml  response.txt
db/: wiki.db
notebooks/: asr.ipynb  translate.ipynb  vector_db.ipynb  web_search.ipynb
src/asr/: asr_api.py
src/audio_processing/: record_audio.py  resample.py
src/hf/: save_model.py
src/llm/: llm_api.py  prompt.py
src/log/: log_config.py
src/search/: search_api.py  wikipedia_api.py
src/tasks/: task1_data_collection.py  task2_vector_db.py  task3_asr.py  task5_rag_pipeline_offline.py  task_1_2_data_collection_ingestion.py
src/translate/: translate_api.py
src/vector_db/: doc_chunking.py  initialize_db.py
web_search_cache_results/: search_cache.json
wikipedia_pages/: Fall_of_the_Western_Roman_Empire_wikipedia.txt  Industrial_Revolution_wikipedia.txt  List_of_tallest_buildings_wikipedia.txt  Python_(programming_language)_wikipedia.txt  Tourism_in_India_by_state_wikipedia.txt  Tourism_in_India_wikipedia.txt
